# nix-templates

./: README.md  flake.nix
aoc-janet/: .gitignore  README.md  flake.nix
aoc-lua/: flake.nix
deno/: .gitignore  flake.nix
go/: .gitignore  flake.nix
haskell/: flake.nix  haskell-starter.cabal  project.nix
haskell-advent-of-code/: .gitignore  CHANGELOG.md  flake.nix  haskell-advent-of-code.cabal  project.nix
haskell-advent-of-code/app/: Main.hs
haskell-aoc/: .gitignore  flake.nix
janet/: flake.nix
lua/: .gitignore  flake.nix
node/: .gitignore  flake.nix
node-npm/: .gitignore  flake.nix
node-yarn/: .gitignore  flake.nix
unstable-utils/: flake.nix
