cabal-version:      3.0
name:               haskell-starter
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Some One
maintainer:         your@email.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable haskell-starter
  ghc-options:      -Wall -threaded
  default-language: Haskell2010
  main-is:          Main.hs
  build-depends:    base ^>=4.16.4.0
  hs-source-dirs:   app
  default-language: Haskell2010
