cabal-version:      3.8
name:               haskell-starter
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Some One
maintainer:         your@email.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable haskell-starter
  ghc-options:      -Wall -threaded
  default-language: GHC2021
  main-is:          Main.hs
  build-depends:    base
  hs-source-dirs:   app
